Footer improved. Picture alignment fixed

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -6,6 +6,8 @@ $bk_color5:#0B1E74;
 $bk_color6:#0326C8;
 $bk_color7:#6273C0;
 $bk_color8:#46495A;
+$footer_background: #434343;
+$scroll_track: #5c97bf;
 $font_1: 'Bebas Neue',cursive;
 //$font_para: 'ZCOOL QingKe HuangYou', cursive;
 $font_para: 'Satisfy', cursive;
@@ -42,18 +44,18 @@ body{
     font-size: 2em;
     text-decoration: none;
     color: white;
-    a:hover{
-        color: $bk_color5;
-    }
+    
 }
 .about{
     width: 84%;
     margin-top: 5%;
     margin-left: 8%;
+    display: flex;
+    flex-direction: column;
 }
 
 .pic{
-    margin-left: 40%;
+    align-self: center;
     width: 200px;
     height: 200px;
     border-radius: 50%;
@@ -65,6 +67,12 @@ body{
    // -webkit-animation: glow 1s ease-in-out infinite alternate;
    // -moz-animation: glow 1s ease-in-out infinite alternate;
     animation: glow 1s ease-in-out infinite alternate;
+}
+
+.caption{
+    width: 30%;
+    height: 200px;
+    margin-left: 40%;
 }
 .intro{
     color: white;
@@ -118,14 +126,49 @@ a{
 }
 
 .footer{
-    height: 10%;
-    max-height: 60px;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
     position: sticky;
+    background-color: $footer_background;
     bottom: 0px;
-    background-color: #434343;
+    height: 70px;
+    width: 100vw;
+    overflow-x: auto;
+    display: flex;
+    flex-direction: column;
+
+    .footer-slides{
+        width: 100vw;
+        overflow-x: auto;
+        height: 70px;
+        display: flex;
+        flex-direction: row;
+        scrollbar-width: thin;
+        scrollbar-color:$scroll_track $footer_background;
+        scroll-behavior: smooth !important;
+        
+        .footer-social{
+            width: 100vw;
+            display: flex;
+            justify-content: space-around;
+            margin-bottom: 3px;
+            flex-shrink: 0;
+        }
+    
+        .footer-links{
+            width: 100vw;
+            display: flex;
+            flex-shrink: 0;
+            justify-content: space-around;
+            margin-bottom: 3px;
+    
+        }
+    }
+
+    
+       
+
+    
+
+
 }
 
 
@@ -168,6 +211,20 @@ a{
     }
 }
 
+.footer-slides::-webkit-scrollbar {
+    height: 5px;
+    scroll-behavior: smooth !important;
+  }
+   
+.footer-slides::-webkit-scrollbar-track {
+   background-color: $footer_background
+  }
+   
+  .footer-slides::-webkit-scrollbar-thumb {
+    background-color: $scroll_track;
+    border-radius: 10px;
+  }
 
+  
 
 
